--- a/site/public/dashboard/dashboardGerente.html
+++ b/site/public/dashboard/dashboardGerente.html
@@ -43,7 +43,7 @@
             <li class="nav-item active">
                 <a class="nav-link" href="dashboardGerente.html">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>Dashboard</span></a>
+                    <span>Dashboard Gestor</span></a>
             </li>
 
             <!-- Divider -->
@@ -181,7 +181,7 @@
 
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
+                        <h1 class="h3 mb-0 text-gray-800" id="dataSistema"></h1>
                         <!--
                             <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
                                 class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
@@ -351,7 +351,7 @@
                                 <!-- Card Body -->
                                 <div class="card-body">
                                     <div class="chart-pie pt-4 pb-2">
-                                        <canvas id="myPieChart"></canvas>
+                                        <canvas id="graficoTipoProblemas"></canvas>
                                     </div>
                                     <div class="mt-4 text-center small">
                                         <span class="mr-2">
@@ -434,12 +434,21 @@
     <!-- Page level custom scripts -->
     <script src="js/demo/chart-ranking-servidores.js"></script>
     <script src="js/demo/chart-dia-semana.js"></script>
-    <script src="js/demo/chart-pie-demo.js"></script>
+    <script src="js/demo/chart-tipo-problemas.js"></script>
 
 </body>
 
 </html>
 <script>
-    validarSessao();
-    exibirNome();
+    
+    (function getDatetime(){
+        setInterval(()=>{
+            var now = new Date();
+            var dataAtual = now.toLocaleString();
+
+            document.getElementById('dataSistema').innerHTML = dataAtual;
+
+            }, 1000)
+    })()
+
 </script>
